# messageapi_takehome_project

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  improvements.md  requirements.md  stream_of_consciousness.md
api/: __main__.py  database_calls.py  database_connection.py  pyproject.toml
api-image/api/: __main__.py  database_calls.py  database_connection.py  pyproject.toml
db-image/: Dockerfile  schema.sql
docs/: examples.md  improvements.md  requirements.md  stream_of_consciousness.md
