[tool.poetry]
name = "api"
version = "0.1.0"
description = "Message API for Guild's take-home project"
authors = ["Jeremy Richards <me@richards.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
mariadb = "^1.0.6"
Flask = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
